<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.alexander.pruebamenu.Activity.PantallaSubasta"
    tools:showIn="@layout/activity_subasta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/RVImagenes"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:orientation="vertical">

        </android.support.v7.widget.RecyclerView>

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/separadorvertical" />

        <TextView
            android:id="@+id/descripcionSubasta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="Laptop nueva color rojo que incluye cargador, bateria, forro y bolso con Windows 10 para envios a toda Venezuela"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/separadorvertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fecha"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <TextView
                    android:id="@+id/fechaSubasta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="12/05/2017" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/vendedor"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <TextView
                    android:id="@+id/vendedorSubasta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Vendedor1" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/precio"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:elevation="0dp"
                        android:text="@string/moneda" />

                    <TextView
                        android:id="@+id/precioSubasta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="200" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hora"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <TextView
                    android:id="@+id/horaSubasta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="14:00" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/martillero"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <TextView
                    android:id="@+id/martilleroSubasta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="martillero1" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/posturaMinima"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:elevation="0dp"
                        android:text="@string/moneda" />

                    <TextView
                        android:id="@+id/posturaMinimaSubasta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="200" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/separadorvertical" />

        <Button
            android:id="@+id/botonPostularse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/colorSecondary"
            android:onClick="postularse"
            android:text="@string/postularse"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/botonFaseSiquiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/colorSecondary"
            android:onClick="cambiarFase"
            android:text="@string/cambiarFase"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/botonSuspender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/colorSecondary"
            android:onClick="suspender"
            android:text="@string/suspender"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
